tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__ABigUglySnake-AAAAAAAAAAAAAAAAAAADhg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 902,
  "prerequisites": [
    225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Required for your first wand, and in general, an ugly creature.\n\n[note]To progress in TF, you need to follow the achievements. They frequently bug out, so drop and pickup everything that dropped from the bosses. Yes, right after you picked it up the first time. It's dumb, we know.[/note]\n\n[note]Also, BQ3 has a tendency to bug out detecting boss kills if you don't melee them, so if you want to complete these quests, use the spawn eggs from the coins tab and melee them when they get low on health if you missed them the first time.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Big Ugly Snake",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 864000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    225
  ],
  "rewards": [],
  "tasks": []
}
