tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__AdventureTime-AAAAAAAAAAAAAAAAAAADhw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 903,
  "prerequisites": [
    902
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Stop him before he makes his wish at Prismos'!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Adventure Time!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 864000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    902
  ],
  "rewards": [],
  "tasks": []
}
