tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__GhastEvolved-AAAAAAAAAAAAAAAAAAADmQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 921,
  "prerequisites": [
    920
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Fluffy, fluffier, ghasts! And also big crybabies. This one hides in a dungeon on IO, and holds the key for Tier 5 planets.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ghast: Evolved",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 1728000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    920
  ],
  "rewards": [],
  "tasks": []
}
