tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__KillBabaYaga-AAAAAAAAAAAAAAAAAAABjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 398,
  "prerequisites": [
    1571
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Baba Yaga is a witch (or one of a trio of sisters of the same name), who appears as a deformed and/or ferocious-looking elderly woman. She flies around in a mortar and wields a pestle. She dwells deep in the forest, in a hut usually described as standing on chicken legs, with a fence decorated with human skulls. Baba Yaga may help or hinder those that encounter or seek her out.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Kill Baba Yaga",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1571
  ],
  "rewards": [],
  "tasks": []
}
